<resources>
    <string name="app_name">GroupEasy</string>
    <string name="sample">sample</string>

    <array name="allot_to_array">
        <item>Select People</item>
        <item>Person 1</item>
        <item>Person 2</item>
        <item>Person 3</item>
        <item>Person 4</item>
        <item>Person 5</item>
    </array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="welcome">Welcome:</string>
    <string name="check_details_or_resigistered">Please check if the entered details are right, or if you do not have an account</string>
    <string name="Lorem_Ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue, orci a pulvinar sollicitudin, nunc risus dapibus arcu, id congue massa eros in augue. Aenean at dui id eros ultricies facilisis vitae ac elit. Etiam tempus molestie leo, at feugiat orci vestibulum at. Ut quis porttitor mi. In vulputate odio nec nulla pretium suscipit</string>
    <string name="default_firebase_groups"><![CDATA[https://firebasestorage.googleapis.com/v0/b/groupiz-4bde3.appspot.com/o/group_image%2Fic_default_groups.png?alt=media&token=645c5e94-6ed7-4fc9-a422-09830206454d]]></string>
    <string name="no_data_msg">You have no groups yet! Click on the Button below to get started</string>
    <string name="no_data_events">You have no Events yet! Go to main page to get started</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to GroupEasy </string>
    <string name="slide_1_desc">The simple chatting and Events planning app !</string>

    <string name="slide_2_title">Create Groups </string>
    <string name="slide_2_desc">Add your friends and family and start a conversation!</string>

    <string name="slide_3_title">Create Events</string>
    <string name="slide_3_desc">Look for the Calender icon INSIDE the group to create and respond to events</string>
    <!--<string name="slide_3_desc">Click on the Calender icon INSIDE the group to create an event, respond to Active Events within the same !</string>-->

    <string name="slide_4_title">Events at a glance !</string>
    <string name="slide_4_desc">Look for the maroon bubble which will highlight the number of events in any group</string>
    <!--<string name="slide_4_desc">The number of active events in any group will be displayed instead of focusing on messages, So what are you waiting for?\n Lets Go !</string>-->

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="click_to_respond_to_this_event">+ Click to respond to this event</string>
    <string name="you_have_entered_nothing">You have entered nothing</string>
    <string name="add_members">Will give the users option to add or remove members in future</string>
    <string name="error">An error occurred:</string>
    <string name="errordel">An error occurred:</string>
    <string name="admin">Creator:</string>
    <string name="save_changes">Save Changes</string>
    <string name="group_name">Group Name</string>
    <string name="image_updated">Image updated</string>
    <string name="i_m_out">I\'m Out</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="oct">OCT</string>
    <string name="_30">30</string>
    <string name="maybe">Maybe</string>
    <string name="i_m_in">I\'m In</string>
    <string name="number_of_participants_1">Number of participants: 1</string>
    <string name="no_participants_in_this_event">No Participants in this event</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="not_specified">Not specified</string>
    <string name="created_by">Created by</string>
    <string name="description">Description</string>
    <string name="time">Time and Date</string>
    <string name="no_event_description_provided">No Event Description Provided</string>
    <string name="_7_00pm">7:00Pm</string>
    <string name="admin_name">Admin Name</string>
    <string name="email_pass_req">Please enter email and password</string>
    <string name="groupeasy">GroupEasy</string>
    <string name="log_in_for_existing_users">Log in for existing users:</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up">New user? Sign Up !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="harsh_p">Harshavardhan Phoujdar</string>
    <string name="whats_the_craic">Whats the craic</string>
    <string name="_10_56pm">10:56pm</string>
    <string name="status">My Status My Status My status statusstatus</string>
    <string name="_0">0</string>
    <string name="bio">Bio:</string>
    <string name="events_created">Events Created</string>
    <string name="events_favourited">Events Favourited</string>
    <string name="logout">Logout</string>
    <string name="tap_the_icon_for_quick_login_once_you_have_signed_up">Tap the icon for quick-login once you have signed-up</string>

</resources>
