<?xml version="1.0" encoding="utf-8"?>

<!--This is the xml for Login activity-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="example.com.groupeasy.activities.LoginActivity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/my_login_relative_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupeasy"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:id="@+id/btn_login"
        android:layout_marginTop="137dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_for_existing_users"
        android:layout_marginTop="28dp"
        android:textColor="@color/black"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/Register"
        android:textSize="@dimen/header_text_size"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/all_btn_rect_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@+id/user_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <!--<TextView-->
        <!--android:id="@+id/sign_in_with_google"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="or Sign in with Google"-->
        <!--android:layout_below="@+id/Register"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="29dp" />-->

    <Button
        android:id="@+id/btn_login_email"
        android:textSize="@dimen/header_text_size"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/all_btn_rect_shape_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputLayout
        app:counterEnabled="true"
        app:counterMaxLength="33"
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="58dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="33"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15"/>
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
