<?xml version="1.0" encoding="utf-8"?>

<!--This xml being inflated by Groups adapter for Groups Fragment
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    android:layout_marginTop="3dp"
    android:id="@+id/group_linear"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message_text"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/image_view"
            android:ellipsize="end"
            android:maxLength="25"
            android:maxLines="1"
            android:text="@string/group_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/group_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:visibility="gone" />

        <TextView
            android:textColor="@color/colorPrimary"
            android:id="@+id/text_last_message"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/message_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/image_view"
            android:ellipsize="end"
            android:maxLength="45"
            android:maxLines="1"
            android:text="@string/sample" />

        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/text_last_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

            <!---rectangle-->
<!--        <TextView
        android:id="@+id/rectangle"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:background="@drawable/my_rectangle"
        android:gravity="center"
        android:text="4"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/white"/>-->
        <!---circle-->
        <TextView
        android:id="@+id/circle"
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/my_circle_maroon"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="4"
        android:textSize="12sp"
        android:visibility="gone"/>

        <!---hex-->

        <!--<TextView
        android:id="@+id/hex"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/my_hexagon"
        android:gravity="center"
        android:text="2"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
            />-->
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/image_view"
            android:gravity="end"
            android:orientation="horizontal">

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/multi_user"
            app:civ_border_color="@color/dark_grey"
            app:civ_border_width="0.5dp" />

       <!--code for drawing one line in xml-->
        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="75dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textViewAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLength="22"
            android:maxLines="1"
            android:text="@string/harsh_p"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/admin"
            android:textSize="12sp"
            android:layout_below="@+id/text_last_message"
            android:layout_alignLeft="@+id/text_last_message"
            android:layout_alignStart="@+id/text_last_message" />
    </RelativeLayout>
</LinearLayout>